feat: implement Docker Sandbox container.run tool and temporary tokens

--- a/crates/tools/Cargo.toml
+++ b/crates/tools/Cargo.toml
@@ -12,6 +12,8 @@ serde_json = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 base64 = { workspace = true }
+rand = { workspace = true }
+tar = { workspace = true }
 image = { workspace = true }
 screenshots = { workspace = true }
 reqwest = { workspace = true }
