--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ rcgen = "0.13"
 # 직렬화
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_yaml = "0.9"
 
 # LLM
 async-openai = "0.27"
