--- a/crates/skills/Cargo.toml
+++ b/crates/skills/Cargo.toml
@@ -8,6 +8,7 @@ proto = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_yaml = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 
