--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ rcgen = "0.13"
 # 직렬화
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_yaml = "0.9"
 
 # LLM
 async-openai = "0.27"
@@ -62,6 +63,8 @@ tokio-cron-scheduler = "0.10"
 reqwest = { version = "0.12", features = ["json"] }
 chromiumoxide = "0.8"
 bollard = "0.19"
+wasmtime = "38.0.4"
+wasmtime-wasi = "38.0.4"
 sha2 = "0.10"
 base64 = "0.22"
 rand = "0.8"
