--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install Linux native dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxcb1-dev
+
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -73,8 +78,16 @@ jobs:
         run: cargo audit
 
   build-linux:
-    name: build (linux)
+    name: build (linux-${{ matrix.target }})
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        target:
+          - x86_64-unknown-linux-gnu
+          - x86_64-unknown-linux-musl
+          - aarch64-unknown-linux-gnu
+          - aarch64-unknown-linux-musl
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -82,11 +95,14 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
 
+      - name: Install cross
+        uses: taiki-e/install-action@cross
+
       - name: Cache Rust artifacts
         uses: Swatinem/rust-cache@v2
 
-      - name: Build workspace
-        run: cargo build --workspace --all-targets
+      - name: Build workspace for target
+        run: cross build --workspace --target ${{ matrix.target }}
 
   build-macos-arm64:
     name: build (macos-arm64)
@@ -111,6 +127,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install Linux native dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxcb1-dev
+
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -122,24 +143,8 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
 
-      - name: Count tests
-        id: test-count
-        shell: bash
-        run: |
-          count="$(cargo test --workspace --all-targets -- --list 2>/dev/null | awk '/: test$/ {n+=1} END {print n+0}')"
-          echo "count=${count}" >> "${GITHUB_OUTPUT}"
-          echo "Detected test count: ${count}"
-
-      - name: Run coverage with dynamic gate
-        shell: bash
-        run: |
-          if [ "${{ steps.test-count.outputs.count }}" -ge 10 ]; then
-            echo "Coverage gate enabled: fail under 85% (test count >= 10)"
-            cargo llvm-cov --workspace --all-targets --lcov --output-path lcov.info --fail-under-lines 85
-          else
-            echo "Coverage gate informational mode (test count < 10)"
-            cargo llvm-cov --workspace --all-targets --lcov --output-path lcov.info
-          fi
+      - name: Generate lcov for Codecov
+        run: cargo llvm-cov --workspace --all-targets --lcov --output-path lcov.info
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
