--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
     "crates/tools",
     "crates/channels",
     "crates/skills",
-    "crates/cli",
+    "crates/cli", "quinn-test",
 ]
 
 [workspace.dependencies]
@@ -30,7 +30,7 @@ serde_yaml = "0.9"
 async-openai = "0.27"
 
 # 데이터베이스
-sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
+sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }
 
 # CLI
 clap = { version = "4", features = ["derive"] }
