--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ futures-util = "0.3"
 # QUIC / TLS
 quinn = "0.11"
 rustls = { version = "0.23", features = ["ring"] }
+webpki-roots = "0.26"
 rcgen = "0.13"
 
 # 직렬화
