--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,8 +60,7 @@ crossterm = { version = "0.28", features = ["event-stream"] }
 # 스케줄러
 tokio-cron-scheduler = "0.10"
 
-# OAuth / 인증
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 chromiumoxide = "0.8"
 bollard = "0.19"
 sha2 = "0.10"
