--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ serde_json = "1"
 serde_yaml = "0.9"
 
 # LLM
-async-openai = "0.27"
+async-openai = { version = "0.27", default-features = false, features = ["rustls"] }
 
 # 데이터베이스
 sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }
@@ -51,7 +51,7 @@ chrono = { version = "0.4", features = ["serde"] }
 dashmap = "6"
 
 # 채널
-teloxide = { version = "0.12", features = ["macros"] }
+teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls"] }
 
 # TUI
 ratatui = "0.29"
