--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,22 +102,16 @@ jobs:
       - name: Install native Linux dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libssl-dev libxcb1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-xfixes0-dev
+          sudo apt-get install -y pkg-config libssl-dev libxcb1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-xfixes0-dev musl-tools
 
-      - name: Install cross
-        if: endsWith(matrix.target, '-musl')
-        uses: taiki-e/install-action@cross
+      - name: Add Rust target
+        run: rustup target add ${{ matrix.target }}
 
       - name: Cache Rust artifacts
         uses: Swatinem/rust-cache@v2
 
       - name: Build workspace for target
-        run: |
-          if [[ "${{ matrix.target }}" == *"-musl" ]]; then
-            cross build --workspace --target "${{ matrix.target }}"
-          else
-            cargo build --workspace --target "${{ matrix.target }}"
-          fi
+        run: cargo build --workspace --target "${{ matrix.target }}"
 
   build-macos-arm64:
     name: build (macos-arm64)
@@ -165,3 +159,5 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          files: lcov.info
+          fail_ci_if_error: true
