--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,7 +79,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libssl-dev libxcb1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-xfixes0-dev
+          sudo apt-get install -y pkg-config libssl-dev libxcb1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-xfixes0-dev musl-tools
 
       - name: Cache Rust artifacts
         uses: Swatinem/rust-cache@v2
@@ -87,18 +87,9 @@ jobs:
       - name: Add Rust target
         run: rustup target add ${{ matrix.target }}
 
-      - name: Install cross
-        if: endsWith(matrix.target, '-musl')
-        uses: taiki-e/install-action@cross
-
       - name: Build release binary
         shell: bash
-        run: |
-          if [[ "${{ matrix.target }}" == *"-musl" ]]; then
-            cross build --release -p cli --target "${{ matrix.target }}"
-          else
-            cargo build --release -p cli --target "${{ matrix.target }}"
-          fi
+        run: cargo build --release -p cli --target "${{ matrix.target }}"
 
       - name: Package release artifact
         id: package
