--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ chrono = { version = "0.4", features = ["serde"] }
 dashmap = "6"
 
 # 채널
-teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls"] }
+teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
 
 # TUI
 ratatui = "0.29"
