--- a/crates/tools/Cargo.toml
+++ b/crates/tools/Cargo.toml
@@ -15,7 +15,6 @@ base64 = { workspace = true }
 rand = { workspace = true }
 tar = { workspace = true }
 image = { workspace = true }
-screenshots = { workspace = true }
 reqwest = { workspace = true }
 chromiumoxide = { workspace = true }
 futures-util = { workspace = true }
@@ -23,6 +22,9 @@ bollard = { workspace = true }
 quinn = { workspace = true }
 rustls = { workspace = true }
 webpki-roots = { workspace = true }
+
+[target.'cfg(not(target_env = "musl"))'.dependencies]
+screenshots = { workspace = true }
 
 [dev-dependencies]
 rcgen = { workspace = true }
