test(container): add integration test for wasm compilation and execution
This adds an e2e test for wasm compilation, exclusions in Cargo.toml and .gitignore for the wasm test artifacts, and mentions wasm target in skills/README.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ members = [
     "crates/skills",
     "crates/cli", "quinn-test",
 ]
+exclude = [
+    "skills/hello-wasm"
+]
 
 [workspace.dependencies]
 # 비동기 런타임
