--- a/config.example.toml
+++ b/config.example.toml
@@ -33,7 +33,7 @@ provider = "openai"
 model = ""
 
 # API 키 — 환경 변수가 우선 적용됩니다:
-#   OPENPISTACRAB_API_KEY   → 모든 provider에 적용 (최우선)
+#   openpista_API_KEY   → 모든 provider에 적용 (최우선)
 #   OPENAI_API_KEY          → openai / custom (폴백)
 #   TOGETHER_API_KEY        → together
 #   OPENROUTER_API_KEY      → openrouter
@@ -52,6 +52,11 @@ max_tool_rounds = 10
 #   base_url = "https://my-proxy.example.com/v1"
 # base_url = ""
 
+# OAuth 2.0 client ID (PKCE 공개 클라이언트, 비밀이 아님)
+# `openpista auth login` 에서 browser-based OAuth 로그인 시 필요
+# 환경 변수 openpista_OAUTH_CLIENT_ID 로도 설정 가능
+# oauth_client_id = ""
+
 # ─────────────────────────────────────────────
 # 채널 설정
 # ─────────────────────────────────────────────
@@ -67,7 +72,7 @@ enabled = true
 [channels.mobile]
 enabled = false
 port = 4434         # QUIC 리슨 포트 (gateway 와 다른 포트 사용)
-api_token = ""      # 또는 환경 변수 OPENPISTACRAB_MOBILE_TOKEN
+api_token = ""      # 또는 환경 변수 openpista_MOBILE_TOKEN
 
 # ─────────────────────────────────────────────
 # 데이터베이스 / 스킬 경로
