feat(auth): add Anthropic OAuth login and multi-provider model selection
- Add AnthropicProvider with native Messages API support
- Implement OAuth code-display flow for Anthropic browser login
- Extend AgentRuntime with multi-provider register/switch capability
- Unify /model browser to show models from all authenticated providers
- Backfill empty provider field on cached ModelCatalogEntry entries
- Add TUI sidebar, theme system, and selection components
- Replace GlueGoogle/GlueGpt presets with first-class Anthropic preset
- Add --debug flag for file-based tracing to ~/.openpista/debug.log

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ config.toml
 *.key
 *.cert
 *.pid
+*.log
 
 # skills
 skills/hello-wasm/target
@@ -26,3 +27,6 @@ skills/hello-wasm/target
 .DS_Store
 .sisyphus/
 
+
+CLAUDE.md
+.claude
