--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,8 @@ toml = "0.8"
 
 # 로깅
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
+tracing-appender = "0.2"
 
 # 에러
 thiserror = "2"
