--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -16,6 +16,7 @@ uuid = { workspace = true }
 chrono = { workspace = true }
 sqlx = { workspace = true }
 async-openai = { workspace = true }
+reqwest = { workspace = true }
 
 [dev-dependencies]
 tempfile = "3"
