--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
     "crates/tools",
     "crates/channels",
     "crates/skills",
-    "crates/cli", "quinn-test",
+    "crates/cli",
 ]
 exclude = [
     "skills/hello-wasm"
@@ -19,11 +19,8 @@ tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
 futures-util = "0.3"
 
-# QUIC / TLS
-quinn = "0.11"
+# TLS (used by async-openai, reqwest, teloxide)
 rustls = { version = "0.23", features = ["ring"] }
-webpki-roots = "0.26"
-rcgen = "0.13"
 
 # 직렬화
 serde = { version = "1", features = ["derive"] }
