--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,12 +57,13 @@ dashmap = "6"
 teloxide = { version = "0.17", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
 
 
-# 웹 채널
+# 웹 채널 / WhatsApp webhook / Web adapter
 axum = { version = "0.8", features = ["ws"] }
 axum-extra = { version = "0.10", features = ["typed-header"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
 hmac = "0.12"
+sha2 = "0.10"
 hex = "0.4"
 
 
