--- a/crates/channels/Cargo.toml
+++ b/crates/channels/Cargo.toml
@@ -18,6 +18,9 @@ axum = { workspace = true }
 axum-extra = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
+hmac = { workspace = true }
+sha2 = { workspace = true }
+hex = { workspace = true }
 dashmap = { workspace = true }
 uuid = { workspace = true }
 rand = { workspace = true }
@@ -26,3 +29,4 @@ chrono = { workspace = true }
 [dev-dependencies]
 reqwest = { workspace = true }
 tokio-tungstenite = "0.28"
+tempfile = "3"
