--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "crates/channels",
     "crates/skills",
     "crates/cli",
+    "crates/web",
 ]
 exclude = [
     "skills/hello-wasm",
@@ -61,6 +62,10 @@ axum = { version = "0.8", features = ["ws"] }
 axum-extra = { version = "0.10", features = ["typed-header"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
+hmac = "0.12"
+hex = "0.4"
+
+
 # TUI
 ratatui = "0.30"
 crossterm = { version = "0.28", features = ["event-stream"] }
@@ -79,6 +84,11 @@ rand = "0.8"
 tar = "0.4"
 image = "0.24.9"
 screenshots = "0.8"
+
+# WASM 클라이언트 (crates/web)
+wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "Storage", "Window"] }
+js-sys = "0.3"
 
 # 내부 crate
 proto = { path = "crates/proto" }
