--- a/crates/channels/Cargo.toml
+++ b/crates/channels/Cargo.toml
@@ -13,9 +13,13 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 teloxide = { workspace = true }
 futures-util = { workspace = true }
+reqwest = { workspace = true }
 axum = { workspace = true }
 axum-extra = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
+hmac = { workspace = true }
+sha2 = { workspace = true }
+hex = { workspace = true }
 dashmap = { workspace = true }
 uuid = { workspace = true }
