feat(channels): add WhatsApp, Web adapters and /whatsapp TUI wizard
- Add WhatsApp Business Cloud API adapter with webhook verification,
  HMAC signature validation, and message send/receive (505 LOC, 10 tests)
- Add Web adapter with WebSocket transport, CORS, and token auth
  (353 LOC, 6 tests)
- Add Rust→WASM browser client crate (crates/web/)
- Wire both adapters into daemon cmd_start() with response routing
- Add /whatsapp TUI slash command with step-by-step setup wizard
  (phone_number_id, access_token, verify_token, app_secret, webhook_port)
- Add /whatsapp status command with masked secret display
- Add WhatsAppConfig and WebConfig to config.rs with is_configured()
- Update config.example.toml with whatsapp/web sections
- Update README.md and README_ko.md with adapter documentation
- Update ROADMAP.md and ROADMAP_ko.md checklist items as complete

--- a/config.example.toml
+++ b/config.example.toml
@@ -61,6 +61,22 @@ token = ""  # 또는 환경 변수 TELEGRAM_BOT_TOKEN
 enabled = true
 
 
+
+[channels.whatsapp]
+enabled = false
+phone_number_id = ""  # WhatsApp Business phone number ID
+access_token = ""     # Graph API access token
+verify_token = ""     # Webhook verification token
+app_secret = ""       # App secret for HMAC-SHA256 verification
+webhook_port = 8080    # Webhook listener port
+
+[channels.web]
+enabled = false
+token = ""             # Auth token for WebSocket connections (or openpista_WEB_TOKEN)
+port = 3210             # HTTP/WS port (or openpista_WEB_PORT)
+cors_origins = ""      # Comma-separated allowed origins (empty = allow all)
+static_dir = "~/.openpista/web"  # Static file directory for web UI
+
 # ─────────────────────────────────────────────
 # 데이터베이스 / 스킬 경로
 # ─────────────────────────────────────────────
