--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "crates/channels",
     "crates/skills",
     "crates/cli",
+    "crates/web",
 ]
 exclude = [
     "skills/hello-wasm"
@@ -54,6 +55,12 @@ dashmap = "6"
 # 채널
 teloxide = { version = "0.17", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
 
+# HTTP / WebSocket 서버 (WhatsApp webhook, Web adapter)
+axum = { version = "0.8", features = ["ws"] }
+tower-http = { version = "0.6", features = ["cors", "fs"] }
+hmac = "0.12"
+hex = "0.4"
+
 # TUI
 ratatui = "0.30"
 crossterm = { version = "0.28", features = ["event-stream"] }
@@ -72,6 +79,11 @@ rand = "0.8"
 tar = "0.4"
 image = "0.24.9"
 screenshots = "0.8"
+
+# WASM 클라이언트 (crates/web)
+wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "Storage", "Window"] }
+js-sys = "0.3"
 
 # 내부 crate
 proto = { path = "crates/proto" }
