--- a/crates/channels/Cargo.toml
+++ b/crates/channels/Cargo.toml
@@ -13,3 +13,11 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 teloxide = { workspace = true }
 futures-util = { workspace = true }
+reqwest = { workspace = true }
+axum = { workspace = true }
+tower-http = { workspace = true }
+hmac = { workspace = true }
+sha2 = { workspace = true }
+hex = { workspace = true }
+uuid = { workspace = true }
+dashmap = { workspace = true }
