feat(tui): add QR code to /whatsapp status and setup completion
- Add qrcode crate dependency for QR code generation
- Implement generate_qr_lines() using Unicode half-block characters (█▀▄)
- Show QR code (wa.me/{phone}) in /whatsapp status when configured
- Show QR code on WhatsApp setup completion screen
- Add /qr slash command for Web UI URL QR display
- Add OpenQrCode/CloseQrCode actions and QrCodeDisplay app state
- Add QR overlay rendering with Esc/Enter/q to dismiss
- Add 3 new tests for QR code rendering

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -33,6 +33,7 @@ rand = { workspace = true }
 ratatui = { workspace = true }
 crossterm = { workspace = true }
 futures-util = { workspace = true }
+qrcode = "0.14"
 
 
 [dev-dependencies]
