refactor(whatsapp): simplify to phone_number + access_token auth model
Inspired by OpenClaw's single-token gateway architecture, reduce
WhatsApp config from 4 fields to 2 (phone_number + access_token).

- Remove phone_number_id, verify_token, app_secret config fields
- Replace HMAC-SHA256 webhook verification with Bearer token auth
- Drop hmac, sha2, hex dependencies from channels crate
- Simplify /whatsapp TUI wizard from 6 steps to 3
- Fix OpenClaw link in README.md and README_ko.md
- Update config.example.toml and environment variable docs

--- a/config.example.toml
+++ b/config.example.toml
@@ -64,11 +64,9 @@ enabled = true
 
 [channels.whatsapp]
 enabled = false
-phone_number_id = ""  # WhatsApp Business phone number ID
-access_token = ""     # Graph API access token
-verify_token = ""     # Webhook verification token
-app_secret = ""       # App secret for HMAC-SHA256 verification
-webhook_port = 8080    # Webhook listener port
+phone_number = ""    # WhatsApp phone number (e.g. 15551234567)
+access_token = ""    # Access token for the WhatsApp gateway
+webhook_port = 8443   # Webhook listener port
 
 [channels.web]
 enabled = false
