--- a/config.example.toml
+++ b/config.example.toml
@@ -64,9 +64,8 @@ enabled = true
 
 [channels.whatsapp]
 enabled = false
-phone_number = ""    # WhatsApp phone number (e.g. 15551234567)
-access_token = ""    # Access token for the WhatsApp gateway
-webhook_port = 8443   # Webhook listener port
+session_dir = "~/.openpista/whatsapp-session"   # WhatsApp Web session auth state directory
+# bridge_path = "whatsapp-bridge/index.js"      # Path to Node.js bridge script (optional)
 
 [channels.web]
 enabled = false
