refactor(whatsapp): rewrite adapter to WhatsApp Web protocol via Baileys bridge
- Replace Meta Business Cloud API with WhatsApp Web multi-device protocol
- Add Node.js Baileys bridge subprocess (whatsapp-bridge/)
- QR code pairing flow in TUI (/whatsapp command)
- Session persistence in session_dir/auth/
- Simplify WhatsAppConfig to enabled + session_dir + bridge_path
- Rewrite WHATSAPP.md setup guide for QR-based pairing
- Update ROADMAPs to reflect Web protocol approach
- Inspired by OpenClaw's Baileys-based architecture

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ logs/
 # skills
 skills/hello-wasm/target
 
+# WhatsApp bridge
+whatsapp-bridge/node_modules/
+
 # OS / local tooling
 .DS_Store
 .sisyphus/
