feat(web): add Web Channel Adapter with axum WebSocket server and Rust→WASM client
Server (axum):
- WebAdapter with WebSocket upgrade + static file serving
- JSON WsMessage envelope (UserMessage, AgentReply, Ping, Pong, Auth, AuthResult)
- Token-based auth via query param, CORS config, session mapping
- WebConfig with env var overrides (openpista_WEB_TOKEN, openpista_WEB_PORT)
- 11 unit tests for handshake, auth, framing, ping/pong, CORS, sessions

Client (Rust→WASM):
- crates/web/ with wasm-bindgen: WebSocket API, DOM manipulation, localStorage
- WsMessage serde model mirroring server, connect/send/receive logic
- 5 serde roundtrip unit tests, cargo check --target wasm32-unknown-unknown passes

Static H5 chat UI:
- index.html with WASM-first loading, vanilla JS (app.js) fallback
- Mobile-responsive CSS chat interface (style.css)

TUI integration:
- /web status + /web setup wizard (6-step interactive config)
- Response routing for web: channel prefix

Also:
- Remove WhatsApp channel adapter (all references, diagrams, ROADMAP sections)
- Update ROADMAP.md + ROADMAP_ko.md checklists and add open-source references

--- a/config.example.toml
+++ b/config.example.toml
@@ -61,6 +61,14 @@ token = ""  # 또는 환경 변수 TELEGRAM_BOT_TOKEN
 enabled = true
 
 
+
+[channels.web]
+enabled = false
+token = ""        # 또는 환경 변수 openpista_WEB_TOKEN
+port = 3210       # 또는 환경 변수 openpista_WEB_PORT
+cors_origins = "*"
+static_dir = "~/.openpista/web"
+
 # ─────────────────────────────────────────────
 # 데이터베이스 / 스킬 경로
 # ─────────────────────────────────────────────
