--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ members = [
     "crates/cli",
 ]
 exclude = [
-    "skills/hello-wasm"
+    "skills/hello-wasm",
+    "crates/web",
 ]
 
 [workspace.dependencies]
@@ -54,6 +55,12 @@ dashmap = "6"
 # 채널
 teloxide = { version = "0.17", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
 
+
+# 웹 채널
+axum = { version = "0.8", features = ["ws"] }
+axum-extra = { version = "0.10", features = ["typed-header"] }
+tower = "0.5"
+tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
 # TUI
 ratatui = "0.30"
 crossterm = { version = "0.28", features = ["event-stream"] }
