--- a/crates/channels/Cargo.toml
+++ b/crates/channels/Cargo.toml
@@ -13,3 +13,9 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 teloxide = { workspace = true }
 futures-util = { workspace = true }
+axum = { workspace = true }
+axum-extra = { workspace = true }
+tower = { workspace = true }
+tower-http = { workspace = true }
+dashmap = { workspace = true }
+uuid = { workspace = true }
