fix(web-tools-bridge): enable wasm tests and harden bridge id handling

--- a/crates/web/Cargo.toml
+++ b/crates/web/Cargo.toml
@@ -12,3 +12,6 @@ web-sys = { workspace = true }
 js-sys = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3"
