--- a/crates/channels/Cargo.toml
+++ b/crates/channels/Cargo.toml
@@ -18,3 +18,6 @@ axum = { workspace = true }
 tower-http = { workspace = true }
 uuid = { workspace = true }
 dashmap = { workspace = true }
+
+[dev-dependencies]
+tempfile = "3"
