--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -22,6 +22,7 @@ tracing-subscriber = { workspace = true }
 tracing-appender = { workspace = true }
 clap = { workspace = true }
 toml = { workspace = true }
+async-trait = { workspace = true }
 anyhow = "1"
 arboard = "3"
 chrono = { workspace = true }
