--- a/crates/web/Cargo.toml
+++ b/crates/web/Cargo.toml
@@ -4,13 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
 js-sys = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+wasm-bindgen-futures = "0.4"
+console_error_panic_hook = "0.1"
 web-sys = { version = "0.3", features = [
     "Window",
     "Location",
@@ -29,6 +31,12 @@ web-sys = { version = "0.3", features = [
     "Storage",
     "EventTarget",
     "BinaryType",
+    "KeyboardEvent",
     "console",
     "DomTokenList",
+    "Headers",
+    "Request",
+    "RequestInit",
+    "RequestMode",
+    "Response",
 ] }
